Создает оформление документов index.html и portfolio.html

--- a/css/index.css
+++ b/css/index.css
@@ -187,7 +187,7 @@ body {
     padding: 0;
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
-    margin: -1px;;
+    margin: -1px;
 }
 .advantages-list {
   display: flex;
