--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,65 @@
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+}
 /*+++++++HEADER+++++++*/
+
+.container {
+  width: 1158px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.page-header-container {
+  display: flex;
+  align-items: center;
+}
+.page-nav {
+  display: flex;
+  align-items: center;
+}
+
+.menu-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.logo {
+  margin-right: 77px;
+}
+
+.menu-item:not(:last-child) {
+  margin-right: 40px;
+}
+
+.contact-list {
+  display: flex;
+  margin-left: auto;
+}
+
+.contact-item {
+  margin-right: 40px;
+}
 
 .logo {
   font-family: "Raleway", sans-serif;
@@ -27,6 +85,8 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--second-color);
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .logo span {
@@ -46,7 +106,7 @@
   letter-spacing: 0.02em;
 }
 
-.contact {
+.contact-item {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -59,9 +119,27 @@
   color: var(--logo-button-color);
 }
 
+.page-header {
+  background: #ffffff;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
 /*+++++++/HEADER+++++++*/
 
 /*+++++++++++BODY++++++++++*/
+
+.filter-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 96px;
+}
+
+.filter-item:not(:last-child) {
+  margin-right: 24px;
+}
+
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -85,6 +163,10 @@ body {
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .modal-button:hover,
@@ -99,18 +181,56 @@ body {
 
 /*+++++++++LIST oF PROJECT CARDS+++++++++*/
 
-.card-title {
-  visibility: hidden;
+
+
+.card-container {
+  margin-top: 72px;
+  margin-bottom: 120px;
 }
 
+.card-list {
+  display: flex;
+  flex-wrap: wrap;
+    }
+
 .card-item {
-  font-style: normal;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--second-color);
+     margin-bottom: 48px;
+    margin-right: 24px;
+  
 }
+
+.card-item:nth-child(3n+3) {
+  margin-right: 0;
+
+}
+
+.card-item-name {
+padding-top: 32px;
+  padding-bottom: 32px;
+background: var(--white-color);
+border: 0.5px solid #F4F4FD;
+}  
+
+.card-title {
+  padding-left: 16px;
+  margin-bottom: 8px;
+}
+
+.section-card-title {
+   position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
+
+
 
 .card-description {
   font-style: normal;
@@ -119,6 +239,22 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-primary);
+  padding-left: 16px;
+  }
+
+.card-title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--second-color);
+}
+
+
+
+.card-list {
+  width: calc(100-48)/3;
 }
 
 /*+++++++++/LIST oF PROJECT CARDS+++++++++*/
@@ -130,7 +266,8 @@ body {
 }
 
 .footer-about {
-  color: var(--footer-color);
+   color: var(--footer-color);
+
 }
 
 .logo-footer {
@@ -146,5 +283,12 @@ body {
 .logo-footer span {
   color: var(--logo-button-color);
 }
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  padding-top: 100px;
+  padding-bottom: 100px;
+ }
 
 /*++++++++/FOOTER+++++++*/
