--- a/css/index.css
+++ b/css/index.css
@@ -61,6 +61,7 @@ img {
 }
 
 .menu-list {
+   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: row;
 }
@@ -74,6 +75,7 @@ img {
 }
 
 .contact-list {
+   font-family: "Roboto", sans-serif;
   display: flex;
   margin-left: auto;
 }
