--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,11 @@ img {
   background-color: aqua;
 } */
 
+.border-top {
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
 .container {
   width: 1158px;
   margin-left: auto;
@@ -61,7 +66,7 @@ img {
 }
 
 .menu-list {
-   font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: row;
 }
@@ -75,12 +80,11 @@ img {
 }
 
 .contact-list {
-   font-family: "Roboto", sans-serif;
   display: flex;
   margin-left: auto;
 }
 
-.contact-item {
+.contact-mail {
   margin-right: 40px;
 }
 
@@ -111,6 +115,8 @@ img {
   line-height: 1.5;
   color: var(--second-color);
   letter-spacing: 0.02em;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .contact-item {
@@ -119,6 +125,8 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--contact-description-color);
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .contact-item:hover,
@@ -140,6 +148,8 @@ body {
 .hero {
   text-align: center;
   background-color: var(--second-color);
+  padding-top: 192px;
+  padding-bottom: 192px;
 }
 
 .hero-title {
@@ -149,7 +159,6 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--white-color);
-  padding-top: 192px;
   margin-bottom: 48px;
 }
 
@@ -168,7 +177,6 @@ body {
   padding-bottom: 16px;
   padding-left: 32px;
   padding-right: 32px;
-  margin-bottom: 192px;
 }
 
 .modal-button:hover,
@@ -180,27 +188,30 @@ body {
 
 /*++++++++ADVANTAGES++++++++*/
 .advantage-title {
- position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 .advantages-list {
   display: flex;
   flex-direction: row;
+}
+.advantages-items {
+  width: calc((100% - 72px) / 4);
 }
 
 .advantages-items:not(:last-child) {
   margin-right: 24px;
 }
 
-.advantage-section{
+.advantage-section {
   padding-top: 120px;
 }
 /*++++++++/ADVANTAGES++++++++*/
@@ -232,7 +243,6 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--contact-description-color);
-  margin-top: 8px;
 }
 
 .section {
@@ -245,7 +255,6 @@ body {
 .activity-list {
   display: flex;
   flex-direction: row;
-  width: calc(100-48)/3;
 }
 
 .activity-item:not(:last-child) {
@@ -262,8 +271,6 @@ body {
 
 .team-list {
   display: flex;
-  flex-direction: row;
-  width: calc(100-48)/4;
 }
 
 .team-item {
@@ -271,17 +278,13 @@ body {
   text-align: center;
 }
 
-.team-title {
-  margin-top: 32px;
-}
-
-
-.team-title-description{
+.team-title-description {
   padding-top: 32px;
   padding-bottom: 32px;
- background: #FFFFFF;
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-border-radius: 0px 0px 4px 4px;
+  background: #ffffff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 /*++++++++++/TEAM++++++++++++*/
 
@@ -289,11 +292,15 @@ border-radius: 0px 0px 4px 4px;
 
 .footer {
   background-color: var(--second-color);
+  padding-top: 100px;
+  padding-bottom: 100px;
+  text-align: left;
 }
 
 .footer-about {
-   color: var(--footer-color);
-
+  color: var(--footer-color);
+  width: 264px;
+  margin-top: 16px;
 }
 
 .logo-footer {
@@ -309,12 +316,5 @@ border-radius: 0px 0px 4px 4px;
 .logo-footer span {
   color: var(--logo-button-color);
 }
-
-.footer-container {
-  display: flex;
-  flex-direction: column;
-  padding-top: 100px;
-  padding-bottom: 100px;
- }
 
 /*++++++++/FOOTER+++++++*/
