--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ img {
   margin-left: auto;
 }
 
-.contact-item {
+.contact-mail {
   margin-right: 40px;
 }
 
@@ -104,6 +104,8 @@ img {
   line-height: 1.5;
   color: var(--second-color);
   letter-spacing: 0.02em;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .contact-item {
@@ -112,6 +114,8 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--contact-description-color);
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .contact:hover,
@@ -133,8 +137,8 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 96px;
-}
+   margin-bottom: 72px;
+ }
 
 .filter-item:not(:last-child) {
   margin-right: 24px;
@@ -181,10 +185,11 @@ body {
 
 /*+++++++++LIST oF PROJECT CARDS+++++++++*/
 
-.card-container {
-  margin-top: 72px;
-  margin-bottom: 120px;
+.section-cards {
+  padding-top: 96px;
+padding-bottom: 120px;
 }
+
 
 .card-list {
   display: flex;
@@ -196,19 +201,22 @@ body {
   margin-right: 24px;
 }
 
+.card-item:nth-last-child(-n + 3){
+  margin-bottom: 0;
+}
+
 .card-item:nth-child(3n + 3) {
   margin-right: 0;
 }
 
 .card-item-name {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 16px;
   background: var(--white-color);
-  border: 0.5px solid #f4f4fd;
+      box-shadow: 0px 1px 6px rgba(46, 47, 66, .08);
+  /* border: 0.5px solid #f4f4fd; */
 }
 
 .card-title {
-  padding-left: 16px;
   margin-bottom: 8px;
 }
 
@@ -232,8 +240,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-primary);
-  padding-left: 16px;
-}
+ }
 
 .card-title {
   font-style: normal;
@@ -252,13 +259,19 @@ body {
 
 /*++++++++FOOTER+++++++*/
 
+
 .footer {
   background-color: var(--second-color);
-}
+  padding-top: 100px;
+  padding-bottom: 100px;
+  text-align: left;
+ }
 
 .footer-about {
-  color: var(--footer-color);
-}
+   color: var(--footer-color);
+  width: 264px;
+  margin-top: 16px;
+   }
 
 .logo-footer {
   font-family: "Raleway", sans-serif;
@@ -274,11 +287,4 @@ body {
   color: var(--logo-button-color);
 }
 
-.footer-container {
-  display: flex;
-  flex-direction: column;
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
-/*++++++++/FOOTER+++++++*/
++++++/FOOTER+++++++*/
