--- a/css/style.css
+++ b/css/style.css
@@ -137,8 +137,8 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: center;
-   margin-bottom: 72px;
- }
+  margin-bottom: 72px;
+}
 
 .filter-item:not(:last-child) {
   margin-right: 24px;
@@ -187,9 +187,8 @@ body {
 
 .section-cards {
   padding-top: 96px;
-padding-bottom: 120px;
+  padding-bottom: 120px;
 }
-
 
 .card-list {
   display: flex;
@@ -201,7 +200,7 @@ padding-bottom: 120px;
   margin-right: 24px;
 }
 
-.card-item:nth-last-child(-n + 3){
+.card-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 
@@ -212,7 +211,7 @@ padding-bottom: 120px;
 .card-item-name {
   padding: 32px 16px;
   background: var(--white-color);
-      box-shadow: 0px 1px 6px rgba(46, 47, 66, .08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
   /* border: 0.5px solid #f4f4fd; */
 }
 
@@ -240,7 +239,7 @@ padding-bottom: 120px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-primary);
- }
+}
 
 .card-title {
   font-style: normal;
@@ -259,19 +258,18 @@ padding-bottom: 120px;
 
 /*++++++++FOOTER+++++++*/
 
-
 .footer {
   background-color: var(--second-color);
   padding-top: 100px;
   padding-bottom: 100px;
   text-align: left;
- }
+}
 
 .footer-about {
-   color: var(--footer-color);
+  color: var(--footer-color);
   width: 264px;
   margin-top: 16px;
-   }
+}
 
 .logo-footer {
   font-family: "Raleway", sans-serif;
