--- a/css/index.css
+++ b/css/index.css
@@ -66,7 +66,6 @@ img {
 }
 
 .menu-list {
-  font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: row;
 }
@@ -145,11 +144,33 @@ body {
 
 /*++++++++++HERO+++++++*/
 
+
+
+ .icon {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ width: 264px;
+ height: 112px;
+ background-color: #F4F4FD;
+ border-radius: 4px;
+ margin-bottom: 8px;
+ }
+
+
+
 .hero {
   text-align: center;
   background-color: var(--second-color);
   padding-top: 192px;
   padding-bottom: 192px;
+  background-color: rgba(0, 0, 0, 1);
+  background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
+ url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1600px;
 }
 
 .hero-title {
@@ -171,8 +192,7 @@ body {
   background-color: var(--logo-button-color);
   cursor: pointer;
   border-style: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+   border-radius: 4px;
   padding-top: 16px;
   padding-bottom: 16px;
   padding-left: 32px;
@@ -182,12 +202,13 @@ body {
 .modal-button:hover,
 .modal-button:focus {
   background-color: var(--hover-button);
+ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /*++++++++++/HERO+++++++*/
 
 /*++++++++ADVANTAGES++++++++*/
-.advantage-title {
+.hidden-title {
   position: absolute;
   white-space: nowrap;
   width: 1px;
@@ -202,7 +223,9 @@ body {
 .advantages-list {
   display: flex;
   flex-direction: row;
-}
+  }
+
+
 .advantages-items {
   width: calc((100% - 72px) / 4);
 }
@@ -243,6 +266,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--contact-description-color);
+  margin-bottom: 8px;
 }
 
 .section {
@@ -285,17 +309,89 @@ body {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
+  }
+
+
+.social-media-list{
+  display: flex;
+  justify-content: center;
+  margin-right: 16px;
+  margin-left: 16px;
 }
+.social-media-item {
+  width: 40px;
+  height: 40px;
+ margin-right: 24px;
+}
+
+.social-media-item:last-child {
+  margin-right: 0;
+}
+
+.social-media-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /*++++++++++/TEAM++++++++++++*/
+
+
+
+/* +++++++++++++CUSTOMERS+++++++++++++++ */
+
+.clients-list {
+  display: flex;
+  justify-content: space-between;
+   }
+
+.clients-item {
+width: 168px;
+height: 88px;
+}
+
+
+.clients-item-link {
+  display: flex;
+   border: 1px solid #8E8F99;
+border-radius: 4px;
+width: 100%;
+height: 100%;
+justify-content: center;
+align-items: center;
+fill: #8E8F99;
+}
+
+.clients-icon {
+ width: 104px;
+height: 56px;
+}
+
+
+  .clients-item-link:hover,
+  .clients-item-link:focus 
+   { fill: var(--logo-button-color);
+border-color: var(--hover-button);
+}
+  
+  
+
+/* +++++++++++++/CUSTOMERS+++++++++++++++ */
+
+
+
 
 /*++++++++FOOTER+++++++*/
 
 .footer {
-  background-color: var(--second-color);
+   background-color: var(--second-color);
   padding-top: 100px;
   padding-bottom: 100px;
-  text-align: left;
-}
+   }
 
 .footer-about {
   color: var(--footer-color);
@@ -316,5 +412,60 @@ body {
 .logo-footer span {
   color: var(--logo-button-color);
 }
+
+.footer-common-contain {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer-contain-first {
+  display: flex;
+  flex-direction: column;
+}
+.footer-contain-second {
+  display: flex;
+  margin-left: 120px;
+   flex-direction: column;
+}
+
+.footer-media-list {
+ display: flex;
+ margin-top: 16px;
+ }
+
+.footer-media-item {
+  width: 40px;
+  height: 40px;
+ margin-right: 24px;
+}
+
+.footer-media-item:last-child {
+  margin-right: 0;
+}
+
+.footer-media-link {
+  width: 100%;
+  height: 100%;
+  background-color: 
+rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-media-text {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--white-color);
+}
+
+.footer-media-link:hover,
+.footer-media-link:focus {
+  background-color: #31D0AA;
+}
+
 
 /*++++++++/FOOTER+++++++*/
