--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,12 @@ body {
   padding: 32px 16px;
   background: var(--white-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-  /* border: 0.5px solid #f4f4fd; */
+}
+
+.card-item-name:hover,
+.card-item-name:focus {
+  border: 0.5px solid #F4F4FD;
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .card-title {
@@ -260,11 +265,10 @@ body {
 /*++++++++FOOTER+++++++*/
 
 .footer {
-  background-color: var(--second-color);
+   background-color: var(--second-color);
   padding-top: 100px;
   padding-bottom: 100px;
-  text-align: left;
-}
+   }
 
 .footer-about {
   color: var(--footer-color);
@@ -286,4 +290,59 @@ body {
   color: var(--logo-button-color);
 }
 
-/* +++++/FOOTER+++++++* */
+.footer-common-contain {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer-contain-first {
+  display: flex;
+  flex-direction: column;
+}
+.footer-contain-second {
+  display: flex;
+  margin-left: 120px;
+   flex-direction: column;
+}
+
+.footer-media-list {
+ display: flex;
+ margin-top: 16px;
+ }
+
+.footer-media-item {
+  width: 40px;
+  height: 40px;
+ margin-right: 24px;
+}
+
+.footer-media-item:last-child {
+  margin-right: 0;
+}
+
+.footer-media-link {
+  width: 100%;
+  height: 100%;
+  background-color: 
+rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-media-text {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--white-color);
+}
+
+.footer-media-link:hover,
+.footer-media-link:focus {
+  background-color: #31D0AA;
+}
+
+
+/*++++++++/FOOTER+++++++*/
