--- a/css/index.css
+++ b/css/index.css
@@ -144,20 +144,15 @@ body {
 
 /*++++++++++HERO+++++++*/
 
-
-
- .icon {
- display: flex;
- align-items: center;
- justify-content: center;
- width: 264px;
- height: 112px;
- background-color: #F4F4FD;
- border-radius: 4px;
- margin-bottom: 8px;
- }
-
-
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
 
 .hero {
   text-align: center;
@@ -165,12 +160,18 @@ body {
   padding-top: 192px;
   padding-bottom: 192px;
   background-color: rgba(0, 0, 0, 1);
-  background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
- url(../images/people-office.jpg);
+  background-image: linear-gradient(
+      to right,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero-title {
@@ -192,7 +193,7 @@ body {
   background-color: var(--logo-button-color);
   cursor: pointer;
   border-style: none;
-   border-radius: 4px;
+  border-radius: 4px;
   padding-top: 16px;
   padding-bottom: 16px;
   padding-left: 32px;
@@ -202,7 +203,7 @@ body {
 .modal-button:hover,
 .modal-button:focus {
   background-color: var(--hover-button);
- box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /*++++++++++/HERO+++++++*/
@@ -223,8 +224,7 @@ body {
 .advantages-list {
   display: flex;
   flex-direction: row;
-  }
-
+}
 
 .advantages-items {
   width: calc((100% - 72px) / 4);
@@ -309,89 +309,80 @@ body {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
-  }
+}
 
-
-.social-media-list{
+.social-media-list {
   display: flex;
   justify-content: center;
-  margin-right: 16px;
-  margin-left: 16px;
 }
 .social-media-item {
   width: 40px;
   height: 40px;
- margin-right: 24px;
+  margin-right: 24px;
 }
 
 .social-media-item:last-child {
   margin-right: 0;
 }
-
 .social-media-link {
   width: 100%;
   height: 100%;
-  background-color: #4d5ae5;
+  background-color: var(--logo-button-color);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.social-media-link:hover {
+  background-color: var(--hover-button);
+}
+
 /*++++++++++/TEAM++++++++++++*/
-
-
 
 /* +++++++++++++CUSTOMERS+++++++++++++++ */
 
 .clients-list {
   display: flex;
-  justify-content: space-between;
-   }
-
-.clients-item {
-width: 168px;
-height: 88px;
+  gap: 24px;
 }
 
+.clients-item {
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
 
 .clients-item-link {
   display: flex;
-   border: 1px solid #8E8F99;
-border-radius: 4px;
-width: 100%;
-height: 100%;
-justify-content: center;
-align-items: center;
-fill: #8E8F99;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  fill: #8e8f99;
 }
 
 .clients-icon {
- width: 104px;
-height: 56px;
+  width: 104px;
+  height: 56px;
 }
 
-
-  .clients-item-link:hover,
-  .clients-item-link:focus 
-   { fill: var(--logo-button-color);
-border-color: var(--hover-button);
+.clients-item-link:hover,
+.clients-item-link:focus {
+  fill: var(--logo-button-color);
+  border-color: var(--hover-button);
 }
-  
-  
 
 /* +++++++++++++/CUSTOMERS+++++++++++++++ */
-
-
-
 
 /*++++++++FOOTER+++++++*/
 
 .footer {
-   background-color: var(--second-color);
+  background-color: var(--second-color);
   padding-top: 100px;
   padding-bottom: 100px;
-   }
+}
 
 .footer-about {
   color: var(--footer-color);
@@ -425,18 +416,18 @@ border-color: var(--hover-button);
 .footer-contain-second {
   display: flex;
   margin-left: 120px;
-   flex-direction: column;
+  flex-direction: column;
 }
 
 .footer-media-list {
- display: flex;
- margin-top: 16px;
- }
+  display: flex;
+  margin-top: 16px;
+}
 
 .footer-media-item {
   width: 40px;
   height: 40px;
- margin-right: 24px;
+  margin-right: 24px;
 }
 
 .footer-media-item:last-child {
@@ -446,8 +437,7 @@ border-color: var(--hover-button);
 .footer-media-link {
   width: 100%;
   height: 100%;
-  background-color: 
-rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -464,8 +454,7 @@ rgba(255, 255, 255, 0.1);
 
 .footer-media-link:hover,
 .footer-media-link:focus {
-  background-color: #31D0AA;
+  background-color: #31d0aa;
 }
-
 
 /*++++++++/FOOTER+++++++*/
