--- a/css/style.css
+++ b/css/style.css
@@ -122,8 +122,6 @@ img {
   padding-bottom: 24px;
 }
 
-
-
 .page-header {
   background: #ffffff;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -217,8 +215,9 @@ body {
 
 .card-item-name:hover,
 .card-item-name:focus {
-  border: 0.5px solid #F4F4FD;
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border: 0.5px solid #f4f4fd;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .card-title {
@@ -265,10 +264,10 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 /*++++++++FOOTER+++++++*/
 
 .footer {
-   background-color: var(--second-color);
+  background-color: var(--second-color);
   padding-top: 100px;
   padding-bottom: 100px;
-   }
+}
 
 .footer-about {
   color: var(--footer-color);
@@ -302,18 +301,18 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .footer-contain-second {
   display: flex;
   margin-left: 120px;
-   flex-direction: column;
+  flex-direction: column;
 }
 
 .footer-media-list {
- display: flex;
- margin-top: 16px;
- }
+  display: flex;
+  margin-top: 16px;
+}
 
 .footer-media-item {
   width: 40px;
   height: 40px;
- margin-right: 24px;
+  margin-right: 24px;
 }
 
 .footer-media-item:last-child {
@@ -323,8 +322,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .footer-media-link {
   width: 100%;
   height: 100%;
-  background-color: 
-rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -341,8 +339,7 @@ rgba(255, 255, 255, 0.1);
 
 .footer-media-link:hover,
 .footer-media-link:focus {
-  background-color: #31D0AA;
+  background-color: #31d0aa;
 }
-
 
 /*++++++++/FOOTER+++++++*/
