--- a/css/style.css
+++ b/css/style.css
@@ -213,13 +213,6 @@ body {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.card-item-name:hover,
-.card-item-name:focus {
-  border: 0.5px solid #f4f4fd;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
 .card-title {
   margin-bottom: 8px;
 }
@@ -255,8 +248,14 @@ body {
   color: var(--second-color);
 }
 
-.card-list {
-  width: calc(100-48) / 3;
+.link-card {
+  display: block;
+}
+
+.link-card:hover,
+.link-card:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 /*+++++++++/LIST oF PROJECT CARDS+++++++++*/
