--- a/css/index.css
+++ b/css/index.css
@@ -116,8 +116,27 @@ img {
   letter-spacing: 0.02em;
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.studio {
+  position: relative;
+}
+
+.studio::after {
+  content: "";
+
+  position: absolute;
+  left: 0;
+
+  bottom: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: var(--hover-button);
+  border-radius: 2px;
+}
 .contact-item {
   font-weight: 400;
   font-size: 16px;
@@ -126,6 +145,7 @@ img {
   color: var(--contact-description-color);
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-item:hover,
@@ -198,6 +218,8 @@ body {
   padding-bottom: 16px;
   padding-left: 32px;
   padding-right: 32px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button:hover,
@@ -332,6 +354,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-link:hover {
@@ -361,6 +384,8 @@ body {
   justify-content: center;
   align-items: center;
   fill: #8e8f99;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-icon {
@@ -442,6 +467,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-media-text {
