--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
   --white-color: #ffffff;
   --footer-color: #e7e9fc;
   --hover-button: #404bbf;
+  --modal-window: #FCFCFC;
 }
 
 h1,
@@ -124,18 +125,19 @@ img {
 }
 
 .studio::after {
-  content: "";
+  content: '';
 
   position: absolute;
   left: 0;
 
   bottom: 0;
 
+
   display: block;
-  width: 100%;
-  height: 4px;
+ width:100%;
+ height: 4px;
   background: var(--hover-button);
-  border-radius: 2px;
+border-radius: 2px;
 }
 .contact-item {
   font-weight: 400;
@@ -218,8 +220,7 @@ body {
   padding-bottom: 16px;
   padding-left: 32px;
   padding-right: 32px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button:hover,
@@ -354,7 +355,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-link:hover {
@@ -384,9 +385,8 @@ body {
   justify-content: center;
   align-items: center;
   fill: #8e8f99;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  transition:  fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
 
 .clients-icon {
   width: 104px;
@@ -467,7 +467,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-media-text {
@@ -484,3 +484,26 @@ body {
 }
 
 /*++++++++/FOOTER+++++++*/
+
+
+/* +++++++++++/MODAL WINDOW+++++++++++ */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background: rgba(46, 47, 66, 0.4);
+}
+
+.modal {
+  width: 408px;
+height: 576px;
+background: var(--modal-window);
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+}
