--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ img {
 body {
   font-family: "Roboto", sans-serif;
 }
-/* +++++++++++/BODY++++++++++ */
+/*+++++++++++/BODY++++++++++*/
 
 /*++++++++FILTER+++++++*/
 
@@ -183,6 +183,7 @@ body {
 /*++++++++/FILTER+++++++*/
 
 /*+++++++++LIST oF PROJECT CARDS+++++++++*/
+
 
 .section-cards {
   padding-top: 96px;
@@ -248,15 +249,41 @@ body {
   color: var(--second-color);
 }
 
-.link-card {
-  display: block;
+.card-img-wrapper {
+  position: relative;
+  overflow: hidden;
 }
+
 
 .link-card:hover,
 .link-card:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+padding: 40px 32px 164px;
+transform: translate(0, 100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+color: var(--secondary-background-color);
+    background-color: var(--logo-button-color);
+   font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+}
+
+.link-card:hover .overlay,
+.link-card:focus  .overlay {
+transform: translate(0, 0);
+}
+
 
 /*+++++++++/LIST oF PROJECT CARDS+++++++++*/
 
@@ -342,3 +369,4 @@ body {
 }
 
 /*++++++++/FOOTER+++++++*/
+
