--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@
   --white-color: #ffffff;
   --footer-color: #e7e9fc;
   --hover-button: #404bbf;
-  --modal-window: #FCFCFC;
+  --modal-window: #fcfcfc;
 }
 
 h1,
@@ -37,6 +37,10 @@ img {
 
 .link {
   text-decoration: none;
+}
+
+button {
+  cursor: pointer;
 }
 
 /*+++++++HEADER+++++++*/
@@ -118,27 +122,26 @@ img {
   padding-top: 24px;
   padding-bottom: 24px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
 }
 
-.studio {
+.current {
   position: relative;
 }
 
-.studio::after {
-  content: '';
-
+.current::after {
+  content: "";
   position: absolute;
   left: 0;
-
   bottom: 0;
-
-
   display: block;
- width:100%;
- height: 4px;
+  width: 100%;
+  height: 4px;
   background: var(--hover-button);
-border-radius: 2px;
+  border-radius: 2px;
+  opacity: 1;
 }
+
 .contact-item {
   font-weight: 400;
   font-size: 16px;
@@ -220,7 +223,8 @@ body {
   padding-bottom: 16px;
   padding-left: 32px;
   padding-right: 32px;
- transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button:hover,
@@ -355,7 +359,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-link:hover {
@@ -385,8 +389,9 @@ body {
   justify-content: center;
   align-items: center;
   fill: #8e8f99;
-  transition:  fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .clients-icon {
   width: 104px;
@@ -467,7 +472,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-media-text {
@@ -485,7 +490,6 @@ body {
 
 /*++++++++/FOOTER+++++++*/
 
-
 /* +++++++++++/MODAL WINDOW+++++++++++ */
 
 .backdrop {
@@ -496,14 +500,51 @@ body {
   width: 100%;
   height: 100%;
   background: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 408px;
-height: 576px;
-background: var(--modal-window);
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
+  height: 576px;
+  background-color: var(--modal-window);
+  position: absolute;
+}
+
+.modal-close-btn {
+  position: absolute;
+  right: 24px;
+  top: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  background-color: var(--footer-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: var(--hover-button);
+}
+
+.modal-close-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon {
+  fill: var(--white-color);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
