--- a/css/index.css
+++ b/css/index.css
@@ -137,7 +137,7 @@ button {
   display: block;
   width: 100%;
   height: 4px;
-  background: var(--hover-button);
+  background-color: var(--hover-button);
   border-radius: 2px;
   opacity: 1;
 }
@@ -499,7 +499,7 @@ body {
   z-index: 100;
   width: 100%;
   height: 100%;
-  background: rgba(46, 47, 66, 0.4);
+  background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms
     cubic-bezier(0.4, 0, 0.2, 1);
 }
