--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
   --contact-description-color: #434455;
   --white-color: #ffffff;
   --footer-color: #e7e9fc;
+  --hover-button: #404bbf;
+  --modal-window: #fcfcfc;
 }
 
 .list {
@@ -126,7 +128,7 @@ img {
 }
 
 .page-header {
-  background: #ffffff;
+  background-color: var(--white-color);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
@@ -143,7 +145,7 @@ img {
   display: block;
   width: 100%;
   height: 4px;
-  background: var(--hover-button);
+  background-color: var(--hover-button);
   border-radius: 2px;
 }
 
@@ -232,7 +234,7 @@ body {
 
 .card-item-name {
   padding: 32px 16px;
-  background: var(--white-color);
+  background-color: var(--white-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
