--- a/css/index.css
+++ b/css/index.css
@@ -499,9 +499,16 @@ body {
   z-index: 100;
   width: 100%;
   height: 100%;
+   opacity: 1;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms
     cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .modal {
@@ -512,6 +519,8 @@ body {
   height: 576px;
   background-color: var(--modal-window);
   position: absolute;
+   transform: translate(-50%, -50%)  scale(1);
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -543,8 +552,7 @@ body {
   fill: var(--white-color);
 }
 
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.9);
 }
