--- a/css/index.css
+++ b/css/index.css
@@ -115,6 +115,8 @@ button {
   color: var(--logo-button-color);
 }
 
+
+
 .menu-link {
   font-weight: 600;
   font-size: 16px;
@@ -129,6 +131,7 @@ button {
 
 .current {
   position: relative;
+  color: var(--logo-button-color);
 }
 
 .current::after {
@@ -495,7 +498,7 @@ body {
 }
 
 .subscribe-footer-wrapper {
-  margin-left: 80px;
+  margin-left: auto;
 }
 
 .subscribe-footer-title {
@@ -521,6 +524,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subscribe-footer-btn:hover,
@@ -540,15 +544,15 @@ body {
   color: white;
   background-color: transparent;
   box-shadow: none;
+  padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subscribe-footer-form {
   display: flex;
-  flex-direction: row;
   margin-top: 16px;
 }
 
@@ -592,8 +596,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 408px;
-  height: 576px;
-  padding: 72px 24px 24px 24px;
+  padding: 72px 24px 24px;
   background-color: var(--modal-window);
   position: absolute;
   transform: translate(-50%, -50%) scale(1);
@@ -640,14 +643,14 @@ body {
   text-align: center;
   font-weight: 500;
   font-size: 16px;
-  line-height: 0.02;
+ letter-spacing: 0.02em
+  line-height: 1.5;
 }
 
 .modal-form {
   display: flex;
   flex-direction: column;
 }
-
 .modal-form-input {
   width: 100%;
   height: 40px;
@@ -655,6 +658,7 @@ body {
   border-radius: 4px;
   padding-left: 38px;
   color: black;
+  /* margin-bottom: 4px; */
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -698,6 +702,7 @@ body {
   height: 120px;
   resize: none;
   padding: 8px 16px;
+  margin-bottom: 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -743,10 +748,6 @@ body {
   margin-bottom: 24px;
 }
 
-.modal-form-label-textarea {
-  margin-bottom: 16px;
-}
-
 .modal-form-btn-submit {
   font-weight: 500;
   font-size: 16px;
@@ -760,9 +761,7 @@ body {
   height: 56px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 24px;
-  align-self: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -770,4 +769,8 @@ body {
 .modal-form-btn-submit:focus {
   background-color: var(--hover-button);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.policy-link {
+  color: var(--logo-button-color);
 }
